# ai-playground

./: CMakeLists.txt  main.cxx
ai/: creature.cxx  creature.hpp  field.cxx  field.hpp  playground.cxx  playground.hpp  simpleneuralnet.hpp
ui/: fieldwidget.cxx  fieldwidget.hpp  fieldwidget.ui  mainwindow.ui  playgroundwidget.cxx  playgroundwidget.hpp  playgroundwidget.ui
